--- a/presentation/src/main/res/layout/activity_classwork10.xml
+++ b/presentation/src/main/res/layout/activity_classwork10.xml
@@ -7,7 +7,7 @@
         <import type="java.lang.String"/>
         <variable
             name="viewModel"
-            type="com.example.nikul.myapplication.classWork.classWork10.UserViewModel"/>
+            type="com.example.nikul.myapplication.presentation.screens.user.UserViewModel"/>
     </data>
 
 
