--- a/presentation/src/main/res/layout/activity_homework3.xml
+++ b/presentation/src/main/res/layout/activity_homework3.xml
@@ -1,45 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    <data>
+
+        <import type="android.view.View" />
+        <variable
+            name="hw3ViewModel"
+            type="com.example.nikul.myapplication.presentation.screens.hw3.Hw3ViewModel" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="50dp"
-            android:focusedByDefault="true"
-            android:hint="http:\\"
-            android:inputType="textUri"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/downloadbutton"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_weight="1"
-            android:text="Загрузить"/>
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:focusedByDefault="true"
+                android:hint="http:\\"
+                android:inputType="textUri"
+                android:text="@{hw3ViewModel.editText}" />
+
+            <Button
+                android:id="@+id/downloadbutton"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:text="@{hw3ViewModel.buttonName}" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="#50c2bb"
+            android:text="@{hw3ViewModel.textView}" />
+
+        <ImageView
+            android:id="@+id/image333"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#333"
+            android:src="@{hw3ViewModel.imageViewUrl}"
+            bind:error="@{@drawable/sova_animation}" />
+
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="DefaultText"
-        android:layout_margin="10dp"
-        android:background="#50c2bb"
-        />
-
-    <ImageView
-        android:id="@+id/image333"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#333"/>
-
-
-</LinearLayout>
+</layout>
